@@ -8,6 +8,7 @@
   * Stickies in lists can now be removed inline
   * Daily Stickies Due now also includes stickies due the following day (or the following Monday)
   * Stickies can be exported to an ICS calendar format from the stickies list
+  * Daily Stickies Due now includes an ICS file to allow syncing with an external calendar
 
 * Bug Fix
   * Viewers can now remove themselves from projects to which they've been added
